; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_texture.c_wined3d_texture_set_map_binding.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_texture.c_wined3d_texture_set_map_binding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_texture = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wined3d_texture_set_map_binding(%struct.wined3d_texture* %0, i32 %1) #0 {
  %3 = alloca %struct.wined3d_texture*, align 8
  %4 = alloca i32, align 4
  store %struct.wined3d_texture* %0, %struct.wined3d_texture** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.wined3d_texture*, %struct.wined3d_texture** %3, align 8
  %7 = getelementptr inbounds %struct.wined3d_texture, %struct.wined3d_texture* %6, i32 0, i32 1
  store i32 %5, i32* %7, align 4
  %8 = load %struct.wined3d_texture*, %struct.wined3d_texture** %3, align 8
  %9 = getelementptr inbounds %struct.wined3d_texture, %struct.wined3d_texture* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %2
  %14 = load %struct.wined3d_texture*, %struct.wined3d_texture** %3, align 8
  %15 = call i32 @wined3d_texture_update_map_binding(%struct.wined3d_texture* %14)
  br label %16

16:                                               ; preds = %13, %2
  ret void
}

declare dso_local i32 @wined3d_texture_update_map_binding(%struct.wined3d_texture*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
